--- a/document/main.bib
+++ b/document/main.bib
@@ -562,16 +562,6 @@ note={\url{https://github.com/jacoco/jacoco/issues/15}}
 	year={2015},
 	organization={ACM}
 }
-@article{adolph2011using,
-	title={Using grounded theory to study the experience of software development},
-	author={Adolph, Steve and Hall, Wendy and Kruchten, Philippe},
-	journal={Empirical Software Engineering},
-	volume={16},
-	number={4},
-	pages={487--513},
-	year={2011},
-	publisher={Springer}
-}
 @inproceedings{johnson2013don,
 	title={Why don't software developers use static analysis tools to find bugs?},
 	author={Johnson, Bryant and Song, Yoonki and Murphy-Hill, Emerson and Bowdidge, Robert},
@@ -798,4 +788,37 @@ note={\url{https://github.com/jacoco/jacoco/issues/15}}
 	pages={47},
 	year={2015},
 	organization={ACM}
+}
+@book{nielson2015principles,
+	title={Principles of program analysis},
+	author={Nielson, Flemming and Nielson, Hanne R and Hankin, Chris},
+	year={2015},
+	publisher={Springer}
+}
+@inproceedings{sadowski2015tricorder,
+	title={Tricorder: Building a program analysis ecosystem},
+	author={Sadowski, Caitlin and Van Gogh, Jeffrey and Jaspan, Ciera and Soderberg, Emma and Winter, Collin},
+	booktitle={Software Engineering (ICSE), 2015 IEEE/ACM 37th IEEE International Conference on},
+	volume={1},
+	pages={598--608},
+	year={2015},
+	organization={IEEE}
+}
+@article{adolph2011using,
+	title={Using grounded theory to study the experience of software development},
+	author={Adolph, Steve and Hall, Wendy and Kruchten, Philippe},
+	journal={Empirical Software Engineering},
+	volume={16},
+	number={4},
+	pages={487--513},
+	year={2011},
+	publisher={Springer}
+}
+@inproceedings{ernst2003static,
+	title={Static and dynamic analysis: Synergy and duality},
+	author={Ernst, Michael D},
+	booktitle={WODA 2003: ICSE Workshop on Dynamic Analysis},
+	pages={24--27},
+	year={2003},
+	organization={Citeseer}
 }
