Long overdue commit of oral document so far :)

--- a/document/main.bib
+++ b/document/main.bib
@@ -120,6 +120,16 @@ pages = {5--14},
 title = {{An interactive ambient visualization for code smells}},
 year = {2010}
 }
+@article{khaddaj2004evaluation,
+	title={The evaluation of software quality factors in very large information systems},
+	author={Khaddaj, Souheil and Horgan, Gerard},
+	journal={Electronic Journal of Information Systems Evaluation},
+	volume={7},
+	number={1},
+	pages={43--48},
+	year={2004},
+	publisher={Academic Conferences Ltd.}
+}
 @article{Eick:2000:Visual,
 author = {Eick, S.G. and Karr, A.F.},
 journal = {National Institute of Statistical Sciences Technical Report},
@@ -518,7 +528,7 @@ note={\url{https://github.com/jacoco/jacoco/issues/15}}
 }
 @article{roy2009comparison,
   title={Comparison and evaluation of code clone detection techniques and tools: A qualitative approach},
-  author={Roy, Chanchal K and Cordy, James R and Koschke, Rainer},
+  author={Roy, Chanchal K and Cordy, James and Koschke, Rainer},
   journal={Science of Computer Programming},
   volume={74},
   number={7},
@@ -821,4 +831,113 @@ note={\url{https://github.com/jacoco/jacoco/issues/15}}
 	pages={24--27},
 	year={2003},
 	organization={Citeseer}
+}
+@misc{jazayeri1997programming,
+	title={Programming language concepts},
+	author={Jazayeri, Mehdi and GHEZZI, Carlo},
+	year={1997},
+	publisher={New York: Wiley}
+}
+@article{mustajoki2008modelling,
+	title={Modelling of (mis) communication},
+	author={Mustajoki, Arto and others},
+	journal={Prikladna lingvistika ta ligvistitshni tehnologii: Megaling-2007},
+	volume={35},
+	year={2008}
+}
+@article{bowman1987modeling,
+	title={Modeling the communication process: The map is not the territory},
+	author={Bowman, Joel P and Targowski, Andrew S},
+	journal={Journal of Business Communication},
+	volume={24},
+	number={4},
+	pages={21--34},
+	year={1987},
+	publisher={SAGE Publications}
+}
+@book{griffin2011first,
+	title={A first look at communication theory},
+	author={Griffin, Emory A and McClish, Glen Arthur},
+	year={2011},
+	publisher={McGraw-Hill Boston}
+}
+	
+@article{Bessey:2010:Coverity,
+	abstract = {How Coverity built a bug-finding tool, and a business, around the unlimited supply of bugs in software systems.},
+	author = {Bessey, Al and Engler, Dawson and Block, Ken and Chelf, Ben and Chou, Andy and Fulton, Bryan and Hallem, Seth and Henri-Gros, Charles and Kamsky, Asya and McPeak, Scott},
+	doi = {10.1145/1646353.1646374},
+	journal = {Commun. ACM},
+	number = {2},
+	pages = {66--75},
+	title = {{A Few Billion Lines of Code Later: Using Static Analysis to Find Bugs in the Real World}},
+	volume = {53},
+	year = {2010}
+}
+@inproceedings{Khoo:2008:PathProjection,
+	author = {Khoo, Yit P. and Foster, Jeffrey S. and Hicks, Michael and Sazawal, Vibha},
+	booktitle = {Proc. PASTE},
+	title = {Path Projection for User-Centered Static Analysis Tools},
+	pages = {57--63},
+	year = {2008}
+}
+@inproceedings{Ayewah:2010:GFF,
+	booktitle = {Proc. ISSTA},
+	doi = {10.1145/1831708.1831738},
+	keywords = {bug patterns,bugs,false positives,findbugs,java,software defects,software quality,static analysis},
+	pages = {241--252},
+	title = {{The Google FindBugs Fixit}},
+	year = {2010}
+}
+@inproceedings{Shen:2011:EFindBugs,
+	author={Shen, Haihao and Fang, Jianhong and Zhao, Jianjun},
+	booktitle={Proc. ICST},
+	title={{EFindBugs}: Effective Error Ranking for FindBugs},
+	pages={299-308},
+	year={2011}
+}
+@inproceedings{Gegick:2007:AutomatedAnalysis,
+	author = {Gegick, Michael and Williams, Laurie},
+	booktitle = {Proc. ICIMP},
+	keywords = {static analysis; security systems; early defect detection },
+	title = {Towards the Use of Automated Static Analysis Alerts for Early Identification of Vulnerability- and Attack-prone Components},
+	pages = {18--23},
+	year = {2007}
+}
+@article{Oberg:1992:Gradients,
+	abstract = {A technique for nonintrusive error notification during programming that uses graduated color and elision, the temporary hiding of information, is described. Users can see errors and their age by the color and can look at the associated error explanation when they are not busy. Interruption is kept to a minimum during notification, and the explanation is close at hand and complete when it is wanted. The application of this technique to the Cornell synthesizer Generator is discussed, and sample generated displays are presented.},
+	author = {Oberg, B. and Notkin, D.},
+	doi = {10.1109/52.168856},
+	journal = {IEEE Softw.},
+	keywords = {Cornell synthesizer Generator,colour,elision,error explanation,error reporting,explanation,graduated color,nonintrusive error notification,programming,programming environments,software tools,user interfaces},
+	number = {6},
+	pages = {33--38},
+	title = {{Error reporting with graduated color}},
+	volume = {9},
+	year = {1992}
+}
+@Manual{RSoftware,
+	title = {R: A Language and Environment for Statistical Computing},
+	author = {{R Core Team}},
+	organization = {R Foundation for Statistical Computing},
+	address = {Vienna, Austria},
+	year = {2013},
+	note = {{ISBN} 3-900051-07-0},
+	url = {http://www.R-project.org/},
+}
+@misc{SunJDK,
+	key ={zzzSunJDK},
+	title={{Oracle Java SE} Downloads},
+	note={\url{http://www.oracle.com/technetwork/java/javase/downloads/index.html}}
+}
+@misc{FindBugsCloud,
+	key ={zzCloud},
+	title={FindBugs Cloud Tutorial},
+	year=2011,
+	note={\url{https://code.google.com/p/findbugs/wiki/FindBugsCloudTutorial}}
+}
+@misc{JFreeChart,
+	key ={zzJFreeChart},
+	title={{JFreeChart}},
+	year=2013,
+	note={\url{http://www.jfree.org/jfreechart/}}
 }
